# Graficador_Distr

./: CMakeLists.txt  coordenada.cpp  coordenada.h  main.cpp
